--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
       ga('create', 'UA-56288576-1', 'auto');
+      ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
 </head>
