--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ "/css/pygments/default.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
+    {% if (site.GH_ENV == "gh_pages") %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -20,4 +21,5 @@
       ga('require', 'displayfeatures');
       ga('send', 'pageview');
     </script>
+    {% endif %}
 </head>
