--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="{{ "/css/font-awesome.css" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/styles/color-brewer.css">
+
+    <script src="/js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
     <script src="{{ "/js/jquery.min.js" | prepend: site.baseurl }}"></script>
     {% if (site.GH_ENV == "gh_pages") %}
