--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -129,22 +129,30 @@ pre,
 code {
     font-size: 15px;
     border: 1px solid $grey-color-light;
-    border-radius: 3px;
-    background-color: #F4F7F2;
+    background-color: #fff;
 }
 
 code {
-    padding: 1px 5px;
+    padding: 0.2em;
+    background-color: #fff;
+    box-shadow:inset 0 0 3px 0 #f1f1f1;
+}
+
+.highlight code {
+    padding: 0.5em;
+    display: block;
+}
+
+.highlight code.language-text {
+    overflow-x: scroll;
 }
 
 pre {
-    padding: 8px 12px;
-    overflow-x: scroll;
+    border-radius: 3px;
 
     > code {
         border: 0;
-        padding-right: 0;
-        padding-left: 0;
+        box-shadow:inset 0 0 3px 0 #f1f1f1;
     }
 }
 
