Optimistic dispatcher fixes.

--- a/css/main.scss
+++ b/css/main.scss
@@ -47,6 +47,10 @@ $on-laptop:        800px;
         "layout"
 ;
 
+.highlighter-rouge span.err, .highlight span.err {
+    border: none;
+}
+
 .header-link {
   position: absolute;
   float: left;
