--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -233,4 +233,18 @@
             font-size: 18px;
         }
     }
+
+    table {
+        margin-bottom: 24px;
+
+        tr {
+        }
+
+        td,th {
+            padding-left: 12px;
+            padding-right: 12px;
+            border-left: 1px solid rgb(200, 200, 200);
+        }
+    }
 }
+
